# mythos

./: .gitignore  CURSOR_HANDOFF.md  LICENSE  Makefile  PLAN.md  README.md  SCALING.md  SECURITY.md  program.md  pyproject.toml  results.tsv
.cursor/: README.md
.cursor/rules/: lane-b-cursor.mdc
.github/workflows/: ci.yml  nightly-eval.yml  weekly-eval.yml
agents/: __init__.py
agents/bio/: harness.py  tasks.json
agents/cyber/: __init__.py  cve_tasks.json  harness.py
agents/secsec/: tasks.json
agents/swe/: __init__.py  harness.py  tasks.json
configs/: demo.yaml  frontier.yaml  medium-smoke.yaml  medium.yaml  nano.yaml  shakespeare.yaml  test.yaml
data/fixtures/: sft_instructions.jsonl  tiny_corpus.txt
demo/: README.md  build_demo.py  index.html  serve_demo.py
demo/assets/: run.json
docs/: AGENT_LANES.md  AGENT_PICKUP.md  ARCHITECTURE.md  BENCHMARKS.md  BRANCH_PROTECTION.md
eval/: composite.py
eval/dashboards/: demo_meta.py  render.py
eval/harness/: config.yaml
eval/scaling/: scaling_results.tsv  scorecard.json
eval/tasks/: __init__.py
scripts/: demo.sh  enable-branch-protection.sh  render-dashboard.sh  run-demo.sh  setup-worktrees.sh  speedrun.sh
src/mythos/: __init__.py  autoresearch.py  checkpoint.py  cli.py  config.py  demo_cli.py  lab.py  posttrain.py  scaling.py  sweep.py  train.py
tests/: conftest.py
tests/integration/: test_eval_smoke.py  test_hf_data.py  test_micro_swe.py  test_posttrain_sft.py  test_rft.py  test_serve.py  test_swe_posttrain.py  test_train_smoke.py
tests/regression/: golden_scores.json  test_no_fake_wins.py  (+1 more)
(+31 files in other folders)
