[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mythos"
version = "0.1.0"
description = "Self-recursive frontier model: Mythos + Fable dual-tier training and eval"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Project Mythos" }]
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "tiktoken>=0.7.0",
    "datasets>=3.0.0",
    "transformers>=4.45.0",
    "accelerate>=1.0.0",
]

[project.optional-dependencies]
eval = [
    "lm-eval>=0.4.7",
]
train = [
    "wandb>=0.18.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]
all = ["mythos[eval,train,dev]"]

[project.scripts]
mythos-train = "mythos.cli:train_main"
mythos-eval = "mythos.eval.cli:main"
mythos-autoresearch = "mythos.autoresearch:main"
mythos-serve = "mythos.serve.api:main"
mythos-lab = "mythos.lab:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mythos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"
